# DeepLenseSubmissionProposal-2025

./: .gitignore  README.md  activate.sh  data_processing.py  download_data.sh  pyproject.toml  utils.py
Multi-Class Classification/: ReadMe.md
Multi_Class_Classification/: ReadMe.md  config.yaml  data_visualization.ipynb  dataset.py  models.py  roc_metric.py  train_loop.py  trainer.py
Multi_Class_Classification/sweep/: sweep.py  sweep_config.yaml  sweep_full_config.yaml
diffusion/: config.yaml  dataloader.py  fid_eval.py  readme.md  test.py  train_loop.py  trainer.py  visualize.ipynb
diffusion/architecture/: attend.py  model.py  modules.py  scheduler.py  utils.py
diffusion/metrics/: fid.py
diffusion/metrics.py/: fid.py
diffusion/sweep/: sweep.py  sweep_config.yaml  sweep_full_config.yaml
foundation_models/: config.yaml  dataloaders.py  readme.md  super_res_config.yaml  test.py  train_loop.py  trainer.py  visualize.ipynb
foundation_models/architectures/: mae.py  super_res_decoder_modules.py  super_resolution.py  vit.py
foundation_models/configs/: classification_finetuning_config.yaml  pre_training_config.yaml  super_res_config.yaml
foundation_models/sweep/: sweep.py  sweep_config.yaml  sweep_full_config.yaml
logs/: common_classification_report.txt
scripts/: common_classification.sh  diffusion.sh  foundationModels.sh  foundationModels_classification.sh  foundationModels_super_res.sh
utils/: callbacks.py  utils.py
vae/: config.yaml  dataloader.py  train_loop.py  trainer.py
vae/architectures/: base_vae.py  beta_vae.py  vanilla_vae.py
(+4 files in other folders)
