[tool.poetry]
name = "deeplensesubmissionproposal-2025"
version = "0.1.0"
description = "The repo for submissionProposal for gsoc-2025 under cern"
authors = ["Sar2580P <sporwal1818@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
omegaconf = "^2.3.0"
numpy = "^2.2.3"
matplotlib = "^3.10.1"
pandas = "^2.2.3"
pytorch-lightning = "^2.5.0.post0"
wandb = "^0.19.7"
scikit-learn = "^1.6.1"
rich = "^13.9.4"
pytorch-fid = "^0.3.0"
einops = "^0.8.1"
ema-pytorch = "^0.7.7"
torchview = "^0.2.6"
graphviz = "^0.20.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
